[project]
name = "email-triage-env"
version = "1.0.0"
description = "A real-world email triage and management simulator for AI agents."
requires-python = ">=3.12"
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "pyyaml>=6.0",
    "python-multipart>=0.0.6",
    "httpx>=0.24.0",
    "requests>=2.31.0",
    "gradio>=4.0.0",
    "pandas>=2.0.0",
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]

[tool.hatch.build.targets.sdist]
include = [
    "server",
    "*.py",
    "openenv.yaml",
]
